# krkr2-no-vcpkg

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme_android.txt  readme_archlinux.txt  readme_fedora41.txt  readme_xubuntu25.txt
src/core/: CMakeLists.txt
src/core/base/: 7zArchive.cpp  BinaryStream.h  CMakeLists.txt  CharacterSet.cpp  EventIntf.cpp  EventIntf.h  PluginIntf.h  ScriptMgnIntf.cpp  ScriptMgnIntf.h  StorageIntf.cpp  StorageIntf.h  SysInitIntf.cpp  SystemIntf.h  TARArchive.cpp  TextStream.cpp  TextStream.h  UtilStreams.cpp  UtilStreams.h  XP3Archive.cpp  XP3Archive.h  ZIPArchive.cpp  tar.h
src/core/base/win32/: EventImpl.cpp  FileSelector.cpp  FuncStubs.cpp  FuncStubs.h  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SusieArchive.h  SysInitImpl.cpp  SystemImpl.cpp  win32io.h
src/core/common/: Defer.h
src/core/environ/: Application.cpp  Application.h  CMakeLists.txt  DetectCPU.cpp  DumpSend.cpp  Platform.h  XP3ArchiveRepack.cpp  XP3ArchiveRepack.h
src/core/environ/ConfigManager/: GlobalConfigManager.cpp  GlobalConfigManager.h  IndividualConfigManager.h  LocaleConfigManager.cpp  LocaleConfigManager.h
src/core/environ/android/: AndroidUtils.cpp  AndroidUtils_new.cpp  AndroidUtils_new2.cpp  AndroidUtils_old.cpp  AndroidUtils_old_copy.txt
src/core/environ/cocos2d/: AppDelegate.cpp  AppDelegate.h  CustomFileUtils.cpp  MainScene.cpp  MainScene.h  YUVSprite.cpp  YUVSprite.h
src/core/environ/linux/: Platform.cpp
src/core/environ/sdl/: tvpsdl.cpp
src/core/environ/ui/: BaseForm.cpp  BaseForm.h  ConsoleWindow.cpp  DebugViewLayerForm.cpp  DebugViewLayerForm.h  FileSelectorForm.cpp  FileSelectorForm.h  GameMainMenu.cpp  GameMainMenu.h  GlobalPreferenceForm.cpp  InGameMenuForm.cpp  InGameMenuForm.h  IndividualPreferenceForm.cpp  MainFileSelectorForm.cpp  MainFileSelectorForm.h  MessageBox.cpp  MessageBox.h  PreferenceConfig.h  PreferenceForm.cpp  PreferenceForm.h  SelectListForm.cpp  SelectListForm.h  SimpleMediaFilePlayer.cpp  SimpleMediaFilePlayer.h  TipsHelpForm.cpp  TipsHelpForm.h  XP3RepackForm.cpp
src/core/environ/win32/: ApplicationSpecialPath.h  Platform.cpp  SystemControl.h  TVPWindow.h  WindowFormUnit.cpp
src/core/extension/: Extension.h
src/core/movie/: CMakeLists.txt  krmovie.cpp
src/core/movie/ffmpeg/: AE.h  AEAudioFormat.h  AEChannelInfo.cpp  AEChannelInfo.h  AEFactory.cpp  AEStream.h  AEStreamInfo.cpp  AEStreamInfo.h  AEUtil.cpp  AEUtil.h  AudioCodec.h  AudioCodecFFmpeg.cpp  AudioCodecFFmpeg.h  AudioCodecPassthrough.cpp  AudioCodecPassthrough.h  AudioDevice.h  BaseRenderer.cpp  BaseRenderer.h  BitstreamStats.cpp  BitstreamStats.h  Clock.cpp  Clock.h  CodecUtils.cpp  CodecUtils.h  Codecs.h  Demux.h  DemuxFFmpeg.cpp  DemuxFFmpeg.h  DemuxPacket.cpp  DemuxPacket.h  FactoryCodec.cpp  Geometry.h  IAudioCallback.h  IVideoPlayer.h  InputStream.cpp  InputStream.h  KRMovieLayer.cpp  KRMovieLayer.h  KRMoviePlayer.cpp  KRMoviePlayer.h  (+26 more)
src/core/msg/: CMakeLists.txt  MsgIntf.cpp
src/core/msg/win32/: MsgImpl.cpp  MsgLoad.cpp  OptionsDesc.cpp  OptionsDesc.h  (+2 more)
src/core/sound/: CDDAIntf.cpp  CDDAIntf.h  FFWaveDecoder.cpp  FFWaveDecoder.h  MIDIIntf.cpp  MIDIIntf.h  MathAlgorithms.cpp  MathAlgorithms.h  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  PhaseVocoderFilter.cpp  PhaseVocoderFilter.h  RingBuffer.h  SoundBufferBaseIntf.h  VorbisWaveDecoder.cpp  VorbisWaveDecoder.h  WaveFormatConverter.cpp  WaveIntf.cpp  WaveIntf.h  WaveLoopManager.cpp  WaveLoopManager.h  WaveSegmentQueue.cpp  WaveSegmentQueue.h  xmmlib.h
src/core/tjs2/: CMakeLists.txt  tjs.cpp  tjs.h  tjs.tab.cpp  tjsArray.cpp  tjsArray.h  tjsBinarySerializer.cpp  tjsBinarySerializer.h  tjsByteCodeLoader.cpp  tjsByteCodeLoader.h  tjsCommHead.h  tjsCompileControl.h  tjsConfig.cpp  tjsConfig.h  tjsConstArrayData.cpp  tjsConstArrayData.h  tjsDate.h  tjsDateParser.cpp  tjsDateParser.h  tjsDebug.cpp  tjsDebug.h  tjsDictionary.cpp  tjsDictionary.h  tjsDisassemble.cpp  tjsError.cpp  tjsError.h  tjsErrorDefs.h  tjsErrorInc.h  tjsError_jp.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsLex.cpp  tjsLex.h  tjsMT19937ar-cok.cpp  tjsMT19937ar-cok.h  tjsMath.cpp  tjsMessage.cpp  (+26 more)
src/core/utils/: CMakeLists.txt  ClipboardIntf.cpp  ClipboardIntf.h  DebugIntf.cpp  DebugIntf.h  Exception.h  KAGParser.cpp  KAGParser.h  MathAlgorithms_Default.cpp  ObjectList.h  PadIntf.h  Random.cpp  TickCount.cpp  TimerIntf.cpp  TimerIntf.h  VelocityTracker.cpp  VelocityTracker.h
src/core/visual/: BitmapIntf.cpp  BitmapIntf.h  BitmapLayerTreeOwner.cpp  BitmapLayerTreeOwner.h  CMakeLists.txt  CharacterData.cpp  CharacterData.h  ComplexRect.cpp  ComplexRect.h  FontImpl.cpp  FontImpl.h  FontRasterizer.h  FontSystem.h  FreeType.cpp  FreeType.h  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  FreeTypeFontRasterizer.h  GraphicsLoadThread.cpp  GraphicsLoadThread.h  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  ImageFunction.cpp  ImageFunction.h  LayerBitmapIntf.cpp  LayerBitmapIntf.h  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LayerManager.h  LayerTreeOwner.h  LayerTreeOwnerImpl.cpp  LayerTreeOwnerImpl.h  LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  LoadPNG.cpp  LoadPVRv3.cpp  LoadTLG.cpp  LoadWEBP.cpp  (+17 more)
(+120 files in other folders)
